Copyright (c) 2002-2007 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  since Silva 2.0.4

    Bugs Fixed:

      - Changed the 'priority' attribute of the silva:content zcml
        attribute to a float, to support more granular priorities
        (they way it was prior to Silva 2.0 zcml)

      - fixed 101791: problem with Link object as index of a container

  Silva 2.0.4

    Features Added:
 
      - added 2 feed icons in /globals, see http://feedicons.com

    Bugs Fixed:

      - Image cropping was not shown correctly when after resizing the image
        was resized back to 100% 
    
      - In SilvaDocument2.0.4: When images are scaled in kupu they are
        shown with correct size after a save action. This is accomplished by
        setting width and height attributes on the image. The image itself
        is still cached, but can be refreshed with a force reload in 
        the browser.

      - the properties tool in kupu wasn't functional with 
        SilvaNewsNetwork 2.6 (unreleased)

      - Ghosts and Ghostfolders no longer show editable titles in the rename
        screen.

  Silva 2.0.3 (2007-11-23)

    Bugs Fixed:

      - Commented out the no-cache line in Image.py that was added 
        because of wuw issue 144 (image not scaling in kupu), it was
        to big of a performance hit. Although zope returns 
        304 NOT MODIFIED headers if possible, it still sends the 
        images at least once, the first time.

      - fixed a bug where clicking on the title of a code source in
        a document, then attempting to save the parameters raised a
        "code course cannot be in a header" error

      - Images in documents that were set to 'link to hires' from 
        kupu were rendered as <url_to_image>?hires?hires

      - on rare occasions, the external source tool in kupu wouldn't
        work for specific documents (double-unquoting the docref)


  Silva 2.0.2

    Bugs fixed:
