@@ -7,7 +7,6 @@ from cStringIO import StringIO
 from types import StringType, IntType
 from zipfile import ZipFile
 from cgi import escape
-from xml.sax.saxutils import unescape
 from zope.i18n import translate
 
 from zope.interface import implements
@@ -112,7 +111,6 @@ class Image(Asset):
 
     security.declareProtected(SilvaPermissions.ChangeSilvaContent,
                               'set_title')
-    
     def set_title(self, title):
         """Set the title of the silva object.
         Overrides SilvaObject set_title() to accomodate the OFS.Image.Image
@@ -555,7 +553,7 @@ class Image(Asset):
         image = getattr(self, id, None)
         created = 0
         title = self.get_title()
-        if repository is None:
+        if not repository:
             image = OFS.Image.Image(id, title, file,
                 content_type=content_type)
             created = 1
@@ -564,9 +562,8 @@ class Image(Asset):
                 self._remove_image(id)
                 image = None
             if image is None:
-                image = ExtImage(self.getId(), title)
+                image = ExtImage(self.getId())
                 created = 1
-                image._repository = repository
                 image = image.__of__(self)
             # self.getId() is used to get a `normal' file name. We restore
             # it later to get the a working absolute_url()
@@ -595,8 +592,8 @@ class Image(Asset):
         msg = 'There is no service_files. Refresh your Silva root.'
         assert service_files is not None, msg
         if service_files.useFSStorage():
-            return service_files.cookPath(service_files.filesystem_path())
-        return None
+            return True
+        return False
 
     def _get_image_and_src(self, hires=0, thumbnail=0):
         img_src = self.absolute_url()
